...
    _collectPreviousAnnouncements();
  }

  /// Creates an alert card to be displayed.
  InkWell _makeAlertCard(String alertTitle, String alertDescription) {
    return InkWell(
      key: Key('Alert'),
      onTap: () async {
        await Navigator.push(
          context,
          MaterialPageRoute(
            builder: (context) =>
                AlertWidget(title: alertTitle, description: alertDescription),
...
  /// Fetches previous announcements from Firestore.
  void _collectPreviousAnnouncements() {
    widget.announcementsStream
        .forEach((QuerySnapshot<Map<String, dynamic>> snapshot) {
      previousAnnouncements.clear();
      snapshot.docs.forEach((QueryDocumentSnapshot element) {
        if ((element['topic'] == 'Alerts') |
            (element['topic'] ==
                FirebaseAuth.instance.currentUser!.displayName!
                    .replaceAll(" ", ""))) {
          addToPrevious(_paddedAlert(
              _makeAlertCard(element['title'], element['description'])));
        }
...
